--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Require.js + Font Awesome SVG with JavaScript</title>
+        <title>Felújítások a-tól z-ig</title>
         <link rel="stylesheet" href="./public/style.css" />
         <script
             crossorigin
