--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
             crossorigin
             src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
         ></script>
+        <script
+            src="https://kit.fontawesome.com/d67de13437.js"
+            crossorigin="anonymous"
+        ></script>
         <script data-main="scripts/main" src="scripts/require.js"></script>
     </head>
     <body>
